--- a/intro.html
+++ b/intro.html
@@ -11,7 +11,7 @@
 <p>First paragraph.</p>
 <p>Second paragraph.</p>
 
-<h2>Check us out?</h2>
+<h2>Check us out!</h2>
   <a href="http://devmission.org/"> Visit Dev Mission! </a>
 
 </body>
